# FBC-Transformer

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/blood_foundation_v1_20260414_132721/: summary.json
artifacts/blood_foundation_v1_20260414_133751/: summary.json
artifacts/blood_foundation_v1_20260414_134443/: summary.json
artifacts/blood_foundation_v1_20260414_135134/: summary.json
artifacts/blood_foundation_v1_20260414_135527/: summary.json
artifacts/blood_foundation_v1_20260414_140407/: summary.json
artifacts/blood_foundation_v1_20260414_141828/: summary.json
artifacts/blood_foundation_v1_20260414_145159/: summary.json
artifacts/blood_foundation_v1_20260414_150504/: summary.json
artifacts/blood_foundation_v1_20260414_154748/: summary.json
artifacts/blood_foundation_v1_20260414_161925/: summary.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: base.yaml  data.yaml  model.yaml  output.yaml  train.yaml
configs/cohort/: amsterdam.yaml  cambridge.yaml  cohort_a.yaml
data/: schema.xlsx
finetunningOutput/output_ferritin/: all_results_combined.csv  all_results_ranked_by_test_rmse.csv
finetunningOutput/output_ferritin_low_label/: all_results_combined.csv  results_for_plotting.csv  (+1 more)
metadata/: canonical_features.csv
scripts/: run_debug.sh  run_pretrain.sh
src/: app.py  config.py  paths.py  registry.py
tests/: test_dataset.py  test_mapper.py  test_model.py  test_schema.py  test_training_step.py
(+130 files in other folders)
